--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   animated_splash_screen: ^1.3.0
   animations: ^2.0.8
   flutter_svg: ^2.0.7
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.12.1
+  firebase_storage: ^11.4.0
+  firebase_core: ^2.20.0
 
 
 dev_dependencies:
